# Dissertation

./: .gitignore  CMakeLists.txt  bash.exe.stackdump
C++/: sh.exe.stackdump
C++/MySQL/: main1.mwb  test.mwb  test.mwb.bak  test2.mwb.bak
C++/libraries/curl/lib/: Makefile  Makefile.inc.cmake  cmake_install.cmake
C++/libraries/json/lib/: CTestTestfile.cmake  Makefile
C++/libraries/sql/include/mysql/: my_config.h
C++/source/: Application.cpp  Application.h  MySQL.cpp  MySQL.h  Statement.cpp  Statement.h  SteamApi.cpp  SteamApi.h  Table.cpp  Table.h  TextReader.cpp  TextReader.h  main.cpp
MySQL/: test2.mwb
Node/: .gitignore  index.js  knexfile.js  password.txt  store.js  tutorial.txt
Node/migrations/: 20180302130148_create_user_table.js  20180302135525_encrypt_user_password.js
Node/public/: app.js  index.html
libraries/curl/lib/: curl_config.h  libcurl_imp.lib
libraries/json/lib/: cmake_install.cmake
source/: Application.cpp  Application.h  MySQL.cpp  MySQL.h  Statement.cpp  Statement.h  SteamApi.cpp  SteamApi.h  Table.cpp  Table.h  TextReader.cpp  TextReader.h  main.cpp  new 1.html
